sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/LDGCRM_Impediment__c.object-meta.xml
<CustomObject>
    <description>Login.gov Impediments (Impediments and Blockers) that track priority things the development team should consider</description>
    <label>Impediment</label>
    <nameField>
        <label>Impediment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impediments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>