sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/fields/LDGCRM_Blocked_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Blocked_Revenue__c</fullName>
    <description>Sum of blocked revenue from Opportunity Impediments</description>
    <inlineHelpText>Sum of blocked revenue from Opportunity Impediments</inlineHelpText>
    <label>Blocked Revenue</label>
    <summarizedField>LDGCRM_Opportunity_Impediment__c.LDGCRM_Blocked_Revenue__c</summarizedField>
    <summaryForeignKey>LDGCRM_Opportunity_Impediment__c.LDGCRM_Impediment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>