sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/fields/LDGCRM_Category__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Category__c</fullName>
    <description>Type of impediment</description>
    <inlineHelpText>Type of impediment</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product / Feature request</fullName>
            </value>
            <value>
                <fullName>Relationship issue</fullName>
            </value>
            <value>
                <fullName>Issue on partner end</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>