sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/fields/LDGCRM_Description__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Description__c</fullName>
    <description>Overview of what the impediment is, along with any relevant links or documentation.</description>
    <inlineHelpText>Overview of what the impediment is, along with any relevant links or documentation.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>