sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/fields/LDGCRM_Talking_Point__c.field-meta.xml
<CustomField>
    <fullName>LDGCRM_Talking_Point__c</fullName>
    <description>Ways to talk about the impediment to partners</description>
    <inlineHelpText>Ways to talk about the impediment to partners</inlineHelpText>
    <label>Talking Point</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>