sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LDGCRM_Category__c</columns>
    <columns>LDGCRM_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>