sfdx/force-app/main/default/objects/LDGCRM_Impediment__c/listViews/LDGCRRM_All_Impediments.listView-meta.xml
<ListView>
    <fullName>LDGCRRM_All_Impediments</fullName>
    <columns>NAME</columns>
    <columns>LDGCRM_Category__c</columns>
    <columns>LDGCRM_Blocked_Revenue__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Impediments</label>
</ListView>